@@ -45,7 +45,7 @@ data:extend({
     allow_productivity = true,
     ingredients =
     {
-      PM.ingredient("pm-transition-metals-ore", 12),
+      PM.ingredient("pm-transition-metals-ore", 8),
       PM.ingredient("pm-hydrochloric-acid", 10, "fluid"),
     },
     allow_decomposition = false,
@@ -85,7 +85,7 @@ data:extend({
     energy_required = 2,
     ingredients =
     {
-      PM.ingredient("pm-transition-metals-ore", 12),
+      PM.ingredient("pm-transition-metals-ore", 8),
       PM.ingredient("pm-chromic-acid", 2, "fluid"),
     },
     allow_decomposition = false,
